# mcp-knowledge-graph

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: __init__.py  config.py  main.py
src/api/: __init__.py  mcp_tools.py  server.py  viewer.py
src/knowledge/: __init__.py  graph.py  inference.py  models.py
