[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-knowledge-graph"
version = "1.0.0"
description = "MCP Server providing verified knowledge graph with fact-checking, reasoning, and best practices"
readme = "README.md"
license = "MIT"
authors = [
    { name = "MOCHE.AI", email = "dev@moche.ai" }
]
keywords = ["mcp", "knowledge-graph", "fact-checking", "reasoning", "neo4j", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "neo4j>=5.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/jutalik/mcp-knowledge-graph"
Documentation = "https://mcp.moche.ai/docs"
Repository = "https://github.com/jutalik/mcp-knowledge-graph"

[project.scripts]
mcp-kg-server = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
